# ai-chat

./: .env.example  .gitignore  CLAUDE.md  Makefile  TODO.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  constants.py  limiter.py  main.py  pyproject.toml
backend/data/: characters.json
backend/db/: conversations.py  mongo.py
backend/graph/: agent.py  nodes.py  state.py
backend/models/: character.py  message.py
backend/routers/: characters.py  chat.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prebuilt  cloudbuild.yaml  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/chat/[characterId]/: page.tsx
frontend/components/: CharacterCard.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/lib/: api.ts  session.ts
