[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.5",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
